<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BleClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_scanner">BLE SCANNER</string>
    <string name="device_control">DEVICE CONTROL</string>
    <string name="ble_scan_btn">SCAN</string>
    <string name="avilable_devicess">Avilable Devices</string>
    <string name="default_device">I am Device</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="message">send your message here(no more 20 letters)</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="Alarm">Alarm</string>
     <string name="send">Send</string>
</resources>