<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bg"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ble" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/device_control"
            android:textColor="@color/top_text_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_connect_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/connected"
            android:textColor="@color/top_text_color"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_address"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_device_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_state"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_connection_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnected"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_message"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:hint="@string/message"
                android:singleLine="true"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:onClick="AlarmTheServer"
                android:text="@string/send"
                android:textSize="15sp" />

            <ExpandableListView
                android:id="@+id/lv_gatt_services_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>