<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bg"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ble" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/ble_scanner"
            android:textColor="@color/top_text_color"
            android:textSize="22sp" />

        <ProgressBar
            android:id="@+id/pb_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/tv_scan_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/ble_scan_btn"
            android:textColor="@color/top_text_color"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/avilable_devicess"
        android:textColor="@color/text_blue"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/lv_sacnner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp" >
    </ListView>

</LinearLayout>